--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: mvn -f MicroserviceClient/pom.xml clean install -DskipTests=true
       
       - name: Build Micro Item
-        run: mvn -f MicroserviceItem/pom.xml clean install -DskipTests=true
+        run: mvn -f MicroServiceItem/pom.xml clean install -DskipTests=true
 
       - name: Build Micro Config
         run: mvn -f MicroserviceConfig/pom.xml clean install -DskipTests=true
@@ -51,7 +51,7 @@ jobs:
 
       - name: Build image item
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/mes:item .
-        working-directory: MicroserviceItem
+        working-directory: MicroServiceItem
 
 
       #Login docker
